--- a/Code.html
+++ b/Code.html
@@ -93,7 +93,7 @@
    <br>
    <h2>Press the keys to play the drums, and experiment with rhythm!</h2>
    <br> <br> <br>
-    <div class="set pressed">
+    <div class="set">
          <button class="drum" id="w">w</button>
          <button class="drum" id="a">a</button>
          <button class="drum" id="s">s</button>
